# TidePool

./: .gitignore  CMakeLists.txt  README.md
bench/: CMakeLists.txt  tiered_cache_bench.cpp
include/tidepool/api/: block.h  block_codec.h  block_key.h  buffer.h  location.h  shard_map.h  status.h  types.h
include/tidepool/client/: connector.h
include/tidepool/coordinator/: coordinator.h  factory.h
include/tidepool/hashring/: hash_ring.h
include/tidepool/protocol/: wire_codec.h
include/tidepool/rpc/: tcp_connector.h
include/tidepool/store/: eviction_policy.h  factory.h  local_index.h  storage_node.h  tier.h
include/tidepool/transport/: factory.h  tcp_connection.h  transport.h  wire_framing.h
integration/vllm/: CMakeLists.txt  vllm_adapter.cpp  vllm_adapter.h
src/: CMakeLists.txt
src/api/: CMakeLists.txt  block_codec.cpp  block_key.cpp  location.cpp  status.cpp
src/client/: CMakeLists.txt  connector.cpp
src/coordinator/: CMakeLists.txt  single_node_coordinator.cpp  single_node_coordinator.h
src/hashring/: CMakeLists.txt  hash_ring.cpp
src/protocol/: CMakeLists.txt  wire_codec.cpp
src/rpc/: CMakeLists.txt  tcp_connector.cpp
src/store/: CMakeLists.txt  storage_node.cpp
src/store/eviction/: CMakeLists.txt  arc_eviction.cpp  arc_eviction.h  cost_aware_eviction.cpp  cost_aware_eviction.h  lru_eviction.cpp  lru_eviction.h
src/store/index/: CMakeLists.txt  local_index.cpp
src/store/tier/dram/: CMakeLists.txt  dram_tier.cpp  dram_tier.h
src/store/tier/ssd/: CMakeLists.txt  ssd_tier.cpp  ssd_tier.h
src/transport/: CMakeLists.txt
src/transport/rdma/: CMakeLists.txt  rdma_transport.cpp  rdma_transport.h
src/transport/tcp/: CMakeLists.txt  tcp_connection.cpp  tcp_transport.cpp  tcp_transport.h  wire_framing.cpp
tests/: CMakeLists.txt  commit_invariant_test.cpp  dram_tier_test.cpp  eviction_test.cpp  lifecycle_test.cpp  protocol_codec_test.cpp  smoke_test.cpp  ssd_lifecycle_test.cpp  ssd_recovery_test.cpp  storage_migration_test.cpp  storage_promotion_test.cpp  tcp_connection_test.cpp  tcp_connector_test.cpp  tier_contract_test.cpp  wire_framing_test.cpp
